Accesibility report changes
Former-commit-id: efd1adde31086143b78a8cfd6688642c06f1f379

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2564,7 +2564,7 @@ pdf.accessibility.global.summary.p2                     = La {0} refleja la cant
 pdf.accessibility.global.summary.p2.bold                = puntuaci\u00F3n media del sitio web
 pdf.accessibility.global.summary.p3                     = El {0} del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
 pdf.accessibility.global.summary.p3.bold                = nivel de cumplimiento estimado
-pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Plenamente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
+pdf.accessibility.global.summary.p4                     = A continuaci\u00F3n se presenta el resultado de la aplicaci\u00F3n de las verificaciones que componen la metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad sobre la p\u00E1gina analizada, obteniendo el Valor "0" si la verificaci\u00F3n \u201CFalla\u201D y el Valor \u201C1\u201D si la verificaci\u00F3n \u201CPasa".
 pdf.accessibility.global.summary.p4.bold                = situaci\u00F3n de cumplimiento estimada
 pdf.accessibility.global.summary.p5                     = Tambi\u00E9n se indica a modo de {0} la posici\u00F3n del sitio web a nivel global de todo el Observatorio, a nivel del segmento al que perteneces y a nivel del grupo Complejidad en el que est\u00E1 enmarcado.
 pdf.accessibility.global.summary.p5.bold                = ranking
@@ -2630,6 +2630,7 @@ pdf.accessibility.line                                  = L\u00EDnea
 pdf.accessibility.main.problems                         = PRINCIPALES PROBLEMAS
 pdf.accessibility.message                               = Mensaje
 pdf.accessibility.num.errors.summary                    = Se han mostrado {0} ejemplos de un total de {1}
+pdf.accessibility.on.demand                             = Informe emitido bajo demanda
 pdf.accessibility.portal                                = {0}\n{1}
 pdf.accessibility.priority.incidence                    = Incidencias Por Prioridad
 pdf.accessibility.problem                               = Problema
@@ -2648,6 +2649,8 @@ pdf.accessibility.seed.detail.title                     = Detalles del sitio web
 pdf.accessibility.subtitle                              = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
 pdf.accessibility.summary.info                          = Este documento muestra \u00FAnicamente el resultado de aplicar verificaciones autom\u00E1ticas a la comprobaci\u00F3n de la declaraci\u00F3n de accesibilidad y no exime de realizar las verificaciones manuales que se estimen oportunas para cumplir con lo recogido en el art\u00EDculo 15 del RD 1112/2018.
 pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB\nCOMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
+pdf.accessibility.title.basic.service                   = INFORME DE\nACCESIBILIDAD WEB
+pdf.accessibility.title.basic.service.2                 = COMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD (BETA)
 pdf.accessibility.warning                               = Advertencia
 pdf.accessibility.warnings                              = Advertencias
 pdf.error.no.results                                    = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
@@ -2841,7 +2844,7 @@ resultados.observatorio.vista.primaria.puntuacion                = Puntuaci\u00F
 resultados.observatorio.vista.primaria.puntuacion.media          = Puntuaci\u00F3n media
 resultados.observatorio.vista.primaria.title                     = T\u00EDtulo
 resultados.observatorio.vista.primaria.url                       = URL
-resultados.observatorio.vista.primaria.urls.accesibilidad        = URL(s) de accesibilidad
+resultados.observatorio.vista.primaria.urls.accesibilidad        = URL de accesibilidad
 resultados.observatorio.vista.primaria.vacio                     = No hay puntuaciones disponibles
 resultados.observatorio.vista.primaria.valor                     = Valor
 resultados.observatorio.vista.primaria.valor.cero                = 0
