--- a/portal/src/main/resources/__ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/__ApplicationResources_en_US.properties
@@ -2943,6 +2943,7 @@ pdf.accessibility.line                                         = Line
 pdf.accessibility.main.problems                                = KEY ISSUES
 pdf.accessibility.message                                      = Message
 pdf.accessibility.num.errors.summary                           = {0} examples of a total {1} have been shown {}
+pdf.accessibility.on.demand                                    = Report issued on demand
 pdf.accessibility.portal                                       = {0}\n{1}
 pdf.accessibility.priority.incidence                           = Issues per Priority
 pdf.accessibility.problem                                      = Problem
@@ -3189,6 +3190,7 @@ resultados.observatorio.vista.primaria.puntuacion                = Score
 resultados.observatorio.vista.primaria.puntuacion.media          = Average score
 resultados.observatorio.vista.primaria.title                     = Title
 resultados.observatorio.vista.primaria.url                       = URL
+resultados.observatorio.vista.primaria.urls.accesibilidad        = Accesibility URL
 resultados.observatorio.vista.primaria.vacio                     = No scores available
 resultados.observatorio.vista.primaria.valor                     = Value
 resultados.observatorio.vista.primaria.valor.cero                = 0
