--- a/portal/src/main/resources/__ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/__ApplicationResources_es_ES.properties
@@ -2941,6 +2941,7 @@ pdf.accessibility.line                                         = L\u00EDnea
 pdf.accessibility.main.problems                                = PRINCIPALES PROBLEMAS
 pdf.accessibility.message                                      = Mensaje
 pdf.accessibility.num.errors.summary                           = Se han mostrado {0} ejemplos de un total de {1}
+pdf.accessibility.on.demand                                    = Informe emitido bajo demanda
 pdf.accessibility.portal                                       = {0}\n{1}
 pdf.accessibility.priority.incidence                           = Incidencias Por Prioridad
 pdf.accessibility.problem                                      = Problema
@@ -3177,6 +3178,7 @@ resultados.observatorio.vista.primaria.puntuacion                = Puntuaci\u00F
 resultados.observatorio.vista.primaria.puntuacion.media          = Puntuaci\u00F3n media
 resultados.observatorio.vista.primaria.title                     = T\u00EDtulo
 resultados.observatorio.vista.primaria.url                       = URL
+resultados.observatorio.vista.primaria.urls.accesibilidad        = URL de accesibilidad
 resultados.observatorio.vista.primaria.vacio                     = No hay puntuaciones disponibles
 resultados.observatorio.vista.primaria.valor                     = Valor
 resultados.observatorio.vista.primaria.valor.cero                = 0
