--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2844,7 +2844,7 @@ resultados.observatorio.vista.primaria.puntuacion                = Puntuaci\u00F
 resultados.observatorio.vista.primaria.puntuacion.media          = Puntuaci\u00F3n media
 resultados.observatorio.vista.primaria.title                     = T\u00EDtulo
 resultados.observatorio.vista.primaria.url                       = URL
-resultados.observatorio.vista.primaria.urls.accesibilidad        = URL(s) de accesibilidad
+resultados.observatorio.vista.primaria.urls.accesibilidad        = URL de accesibilidad
 resultados.observatorio.vista.primaria.vacio                     = No hay puntuaciones disponibles
 resultados.observatorio.vista.primaria.valor                     = Valor
 resultados.observatorio.vista.primaria.valor.cero                = 0
