Fix verification 1.6 css generated content
Disable case sentive same directory check on crawler

Add count of pages on portal detail of analysis


Former-commit-id: 74feff2ae710d21968bab30b25c4cf5b8bf37b0b

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2893,6 +2893,7 @@ salir.sesion.sistema.alt = CERRAR
 search.results.analysis.error      = El an\u00E1lisis para esta p\u00E1gina ha fallado
 search.results.by.tracking         = P\u00E1ginas analizadas por el rastreo seleccionado
 search.results.by.tracking.malware = Resultados
+search.results.by.tracking.pages   = N\u00FAmero de p\u00E1ginas analizadas
 search.results.category            = Categor\u00EDa
 search.results.date                = Fecha del an\u00E1lisis
 search.results.domain              = Dominio
