--- a/portal/src/main/resources/__ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/__ApplicationResources_es_CA.properties
@@ -2575,8 +2575,8 @@ observatorio.puntuacion.nivel.1                                     = Puntuaci\u
 observatorio.puntuacion.nivel.2                                     = Puntuaci\u00F3n Media AA
 observatorio.puntuacion.nivel.a                                     = Puntuaci\u00F3n nivel de adecuaci\u00F3n A
 observatorio.puntuacion.nivel.aa                                    = Puntuaci\u00F3n nivel de adecuaci\u00F3n AA
-observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media Prioridad 1
-observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n Media Prioridad 2
+observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n A
+observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n AA
 observatorio.puntuacion.resultados.globales                         = Resultados globales
 observatorio.puntuacion.resultados.resumen                          = Resumen de resultados
 observatorio.puntuacion.total                                       = Puntuaci\u00F3n media del portal (PMP)
@@ -3240,6 +3240,7 @@ salir.sesion.sistema.alt = CERRAR
 search.results.analysis.error      = El an\u00E1lisis para esta p\u00E1gina ha fallado
 search.results.by.tracking         = P\u00E1ginas analizadas por el rastreo seleccionado
 search.results.by.tracking.malware = Resultados
+search.results.by.tracking.pages   = N\u00FAmero de p\u00E1ginas analizadas
 search.results.category            = Categor\u00EDa
 search.results.date                = Fecha del an\u00E1lisis
 search.results.domain              = Dominio
