--- a/portal/src/main/resources/__ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/__ApplicationResources_en_US.properties
@@ -2576,7 +2576,7 @@ observatorio.puntuacion.nivel.1                                     = Average sc
 observatorio.puntuacion.nivel.2                                     = Average AA score
 observatorio.puntuacion.nivel.a                                     = Matching Level A score
 observatorio.puntuacion.nivel.aa                                    = Alignment level score AA
-observatorio.puntuacion.prioridad.1                                 = Average score Priority 1
+observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media Prioridad 1
 observatorio.puntuacion.prioridad.2                                 = Average score Priority 2
 observatorio.puntuacion.resultados.globales                         = Overall results
 observatorio.puntuacion.resultados.resumen                          = Summary of finding
@@ -3241,6 +3241,7 @@ salir.sesion.sistema.alt = CLOSE
 search.results.analysis.error      = The analysis for this page has failed
 search.results.by.tracking         = Pages analysed by the selected track
 search.results.by.tracking.malware = Achievements
+search.results.by.tracking.pages   = Number of analysed pages
 search.results.category            = Category
 search.results.date                = Date of Analysis
 search.results.domain              = Domain
