Fix UX translations
Fix add seed autocomplete


Former-commit-id: 56876446e54af8c8d66216581bc3c1bedace854b

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -3016,6 +3016,8 @@ third.level.incidents.export    = Prioridad 3
 third.level.incidents.export.bs = Prioridad 3
 third.level.incidents.fulltext  = Incidencias de Prioridad 3
 
+tooltip.obs.add.seed = A\u00F1adir semilla
+
 topN.isnumber = El campo 'P\u00E1ginas por nivel' debe ser un n\u00FAmero entero positivo.
 
 tres.visualizadores = S\u00F3lo puede haber tres usuarios visualizadores por cartucho.
