JS Motor fix set cookie error
Cookie con Java Connection

Update itext 2.1.7 to 5.5.13.1 and refactor


Former-commit-id: a8dbb4688f96ebc49a7136e74d4b11416fc2ff6e

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -2886,7 +2886,7 @@ pdf.accessibility.intro.next.basic.service.list.3.bold7         = 3 years and th
 pdf.accessibility.intro.next.basic.service.list.3.bold8         = major changes
 pdf.accessibility.intro.next.basic.service.list.4               = In any case, this review should be supplemented to consider {0} both {1}. As help material to complement the evaluation you can consult the [anchor1] web available in the eAP, which among other issues, contains a list of free tools to support the realization of that process.
 pdf.accessibility.intro.next.basic.service.list.4.anchor1.text  = Accessibility validation guide
-pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
+pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
 pdf.accessibility.intro.next.basic.service.list.4.bold1         = all the accessibility requirements of UNE-EN 301 549:2019
 pdf.accessibility.intro.next.basic.service.list.4.bold2         = automatic as well as manual review
 pdf.accessibility.intro.next.basic.service.p1                   = In order to assist the recipient of this report, the steps to be taken after receiving the report are listed below:
@@ -2912,7 +2912,7 @@ pdf.accessibility.intro.next.list.3.bold7                       = 3 years and th
 pdf.accessibility.intro.next.list.3.bold8                       = substantial changes
 pdf.accessibility.intro.next.list.4                             = Therefore, if on the basis of the above, the addressee of this report should carry out an accessibility review (according to Article 17 of the RD) it could take as a starting point the evaluation carried out by the Observatory's online diagnostic service. But it should always be complemented for the rest of the requirements, and in addition, with the manual revisions that apply for the automatically revised requirements. The [anchor1] web available in the eAP can be consulted as help material to carry out the accessibility review.
 pdf.accessibility.intro.next.list.4.anchor1.text                = Accessibility Validation Guide
-pdf.accessibility.intro.next.list.4.anchor1.url                 = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
+pdf.accessibility.intro.next.list.4.anchor1.url                 = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
 pdf.accessibility.intro.next.list.4.bold1                       = all the accessibility requirements of UNE-EN 301 549:2019
 pdf.accessibility.intro.next.list.4.bold2                       = automatic as well as manual review
 pdf.accessibility.intro.next.p1                                 = In order to help the addressee of this report, the steps to be taken following receipt of the report are set out below:
