Global report export
Former-commit-id: 7bb30c398ebac198776d472cedb9670336a26b38

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -717,6 +717,7 @@ indice.observatorio.detalle.alt                    = Detalle Observatorio
 indice.observatorio.eliminar.alt                   = Eliminar Observatorio
 indice.observatorio.generar.PDFs.alt               = Generar PDFs Primarios
 indice.observatorio.gestion.observatorio           = Gesti\u00F3n Observatorio
+indice.observatorio.informe.global                 = Informe global
 indice.observatorio.lista                          = Lista de Observatorios
 indice.observatorio.modificar.alt                  = Editar Observatorio
 indice.observatorio.nombre                         = Observatorio
@@ -2729,9 +2730,11 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
-report.config.title         = T\u00EDtulo del informe
-report.config.title.default = Informe de observatorio de accesibilidad web
-report.config.title.label   = T\u00EDtulo del documento generado
+report.config.observatorios.filter.title        = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global = Observatorios para incluir en el informe 
+report.config.title                             = T\u00EDtulo del informe
+report.config.title.default                     = Informe de observatorio de accesibilidad web
+report.config.title.label                       = T\u00EDtulo del documento generado
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
