--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -820,6 +820,7 @@ indice.observatorio.eliminar.alt                   = Remove Observatory
 indice.observatorio.etiquetas                      = Tags
 indice.observatorio.generar.PDFs.alt               = Generate the Primaries Primaria
 indice.observatorio.gestion.observatorio           = Observatory Management
+indice.observatorio.informe.global                 = Global report
 indice.observatorio.lista                          = List of Observatories
 indice.observatorio.modificar.alt                  = Edit Observatory
 indice.observatorio.nombre                         = Observatory
@@ -3054,6 +3055,7 @@ report.config.etiquetas.filter.title               = Filter by tags
 report.config.graficas.filter.info                 = Select the optional graphics to include in the observatory
 report.config.graficas.filter.title                = Optional graphics to include\n
 report.config.observatorios.filter.title           = Observatories to include in the evolutionary
+report.config.observatorios.filter.title.global    = Observatories to include in the report
 report.config.optional.1                           = Overall results. Verification mode
 report.config.optional.2                           = Overall results. Average score by aspect
 report.config.optional.3                           = Results by segment. Average score of the checks
