--- a/portal/src/main/resources/_ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/_ApplicationResources_es_CA.properties
@@ -820,6 +820,7 @@ indice.observatorio.eliminar.alt                   = Eliminar Observatorio
 indice.observatorio.etiquetas                      = Etiquetas
 indice.observatorio.generar.PDFs.alt               = Generar PDFs Primarios
 indice.observatorio.gestion.observatorio           = Gesti\u00F3n Observatorio
+indice.observatorio.informe.global                 = Informe global
 indice.observatorio.lista                          = Lista de Observatorios
 indice.observatorio.modificar.alt                  = Editar Observatorio
 indice.observatorio.nombre                         = Observatorio
@@ -3053,6 +3054,7 @@ report.config.etiquetas.filter.title               = Filtrar por etiquetas
 report.config.graficas.filter.info                 = Seleccione las gr\u00E1ficas opcionales a incluir en el obervatorio
 report.config.graficas.filter.title                = Gr\u00E1ficas opcionales a incluir\n
 report.config.observatorios.filter.title           = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global    = Observatorios para incluir en el informe 
 report.config.optional.1                           = Resultados globales. Modalidad de verificaci\u00F3n
 report.config.optional.2                           = Resultados globales. Puntuaci\u00F3n media por aspectos
 report.config.optional.3                           = Resultados por segmento. Puntuaci\u00F3n media de las verificaciones
