PDF fix after change library
Messages


Former-commit-id: 7283e5363f82561ca70ba4a21e238e07adb0827d

--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -4066,7 +4066,9 @@ welcome.action.message.generate.seeds      = Generate seeds (URLs files) for tra
 welcome.action.message.see.crawlings       = View the results of the sweeps and export them in various formats
 welcome.common.message                     = This is the traceability application of MINHAP web site. The actions that can be carried out with your profile include:
 
-xml.import.error   = Error importing seeds
-xml.import.success = Seeds imported correctly
-xml.seed.not.valid = The file does not contain valid elements
-xml.size.error     = Too big file.
+xml.import.error               = Error importing seeds
+xml.import.success             = Seeds imported correctly
+xml.import.success.all.errors  = No seed has been incorporated
+xml.import.success.with.errors = Seeds imported correctly. Some have not been incorporated because the seed already existed
+xml.seed.not.valid             = The file does not contain valid elements
+xml.size.error                 = Too big file.
