Basic service statdistics
Former-commit-id: bcd525b6b392ee4b5de1375e8f3c4f1d1565b039

--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -367,6 +367,7 @@ colname.classification     = Classification
 colname.complex            = Complexity
 colname.dependecies        = Dependencies
 colname.depth              = Depth
+colname.depthReport        = Depth report
 colname.directory          = Directory
 colname.download           = Download
 colname.email              = Email
@@ -3325,24 +3326,25 @@ semillas.observatorio.title = Linking of Seeds to the Centre
 send.numHilos    = Number of threads
 send.numRastreos = Number of tracking sweeps
 
-servicio.diagnostico.estadisticas.amplitud         = Amplitude
-servicio.diagnostico.estadisticas.avg              = Average time of the analyzes
-servicio.diagnostico.estadisticas.directorio       = In directory
-servicio.diagnostico.estadisticas.email            = E-mail
-servicio.diagnostico.estadisticas.encurso.info     = The analyzes are shown in the "Launched" state of the current day
-servicio.diagnostico.estadisticas.encurso.title    = Analysis in progress
-servicio.diagnostico.estadisticas.estado           = State
-servicio.diagnostico.estadisticas.informe          = Report
-servicio.diagnostico.estadisticas.profundidad      = Depth
-servicio.diagnostico.estadisticas.resultados.info  = The portal type will be indicated if the URL analyzed in the diagnostic service matches any of the seeds stored in the database. Otherwise, it will be indicated as "Other"
-servicio.diagnostico.estadisticas.resultados.title = Search results
-servicio.diagnostico.estadisticas.tipo             = Type
-servicio.diagnostico.estadisticas.url              = Url
-servicio.diagnostico.estadisticas.usuario          = User
-servicio.diagnostico.fecha.fin                     = End date (inclusive)
-servicio.diagnostico.fecha.inicio                  = Start date (included)
-servicio.diagnostico.fecha.legend                  = Export dates range
-servicio.diagnostico.title                         = Diagnostic Service
+servicio.diagnostico.estadisticas.amplitud            = Amplitude
+servicio.diagnostico.estadisticas.avg                 = Average time of the analyzes
+servicio.diagnostico.estadisticas.directorio          = In directory
+servicio.diagnostico.estadisticas.email               = E-mail
+servicio.diagnostico.estadisticas.encurso.info        = The analyzes are shown in the "Launched" state of the current day
+servicio.diagnostico.estadisticas.encurso.title       = Analysis in progress
+servicio.diagnostico.estadisticas.estado              = State
+servicio.diagnostico.estadisticas.informe             = Report
+servicio.diagnostico.estadisticas.informe.profundidad = Depth report
+servicio.diagnostico.estadisticas.profundidad         = Depth
+servicio.diagnostico.estadisticas.resultados.info     = The portal type will be indicated if the URL analyzed in the diagnostic service matches any of the seeds stored in the database. Otherwise, it will be indicated as "Other"
+servicio.diagnostico.estadisticas.resultados.title    = Search results
+servicio.diagnostico.estadisticas.tipo                = Type
+servicio.diagnostico.estadisticas.url                 = Url
+servicio.diagnostico.estadisticas.usuario             = User
+servicio.diagnostico.fecha.fin                        = End date (inclusive)
+servicio.diagnostico.fecha.inicio                     = Start date (included)
+servicio.diagnostico.fecha.legend                     = Export dates range
+servicio.diagnostico.title                            = Diagnostic Service
 
 sesion.activa          = There was another session with your user.
 sesion.duplicadaconfig = There is another session with his user forming part of his cartridge.
