--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -342,6 +342,11 @@ chart.warnings.bs                            = Advertencias
 
 client.accounts.info = Estos son las cuentas clientes a las que est\u00E1 suscrito:
 
+colname.acronym       = Acr\u00F3nimo
+colname.active        = Activa
+colname.analysis.type = Tipo de an\u00E1lisis
+colname.depthReport   = Informe en profundidad
+
 conectividad.form.title            = Comprobaci\u00F3n de URL
 conectividad.form.url              = URL
 conectividad.proxy.activo          = Activo
@@ -2975,10 +2980,10 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin    = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title        = Servicio de Diagn\u00F3stico
+servicio.diagnostico.fecha.fin                        = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio                     = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend                     = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                            = Servicio de Diagn\u00F3stico
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
