--- a/portal/src/main/resources/ApplicationResources_es_CA.properties
+++ b/portal/src/main/resources/ApplicationResources_es_CA.properties
@@ -369,6 +369,7 @@ colname.classification     = Clasificaci\u00F3n
 colname.complex            = Complejidad
 colname.dependecies        = Dependencias
 colname.depth              = Profundidad
+colname.depthReport        = Informe en profundidad
 colname.directory          = Directorio
 colname.download           = Descargar
 colname.email              = Email
@@ -3277,24 +3278,25 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.estadisticas.amplitud         = Amplitud
-servicio.diagnostico.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
-servicio.diagnostico.estadisticas.directorio       = En directorio
-servicio.diagnostico.estadisticas.email            = Email
-servicio.diagnostico.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
-servicio.diagnostico.estadisticas.encurso.title    = An\u00E1lisis en curso
-servicio.diagnostico.estadisticas.estado           = Estado
-servicio.diagnostico.estadisticas.informe          = Informe
-servicio.diagnostico.estadisticas.profundidad      = Profundidad
-servicio.diagnostico.estadisticas.resultados.info  = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
-servicio.diagnostico.estadisticas.resultados.title = Resultados de la b\u00FAsqueda
-servicio.diagnostico.estadisticas.tipo             = Tipo
-servicio.diagnostico.estadisticas.url              = URL
-servicio.diagnostico.estadisticas.usuario          = Usuario
-servicio.diagnostico.fecha.fin                     = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio                  = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend                  = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title                         = Servicio de Diagn\u00F3stico
+servicio.diagnostico.estadisticas.amplitud            = Amplitud
+servicio.diagnostico.estadisticas.avg                 = Tiempo medio de los an\u00E1lisis
+servicio.diagnostico.estadisticas.directorio          = En directorio
+servicio.diagnostico.estadisticas.email               = Email
+servicio.diagnostico.estadisticas.encurso.info        = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
+servicio.diagnostico.estadisticas.encurso.title       = An\u00E1lisis en curso
+servicio.diagnostico.estadisticas.estado              = Estado
+servicio.diagnostico.estadisticas.informe             = Informe
+servicio.diagnostico.estadisticas.informe.profundidad = Informe en profundidadInforme en profundidad
+servicio.diagnostico.estadisticas.profundidad         = Profundidad
+servicio.diagnostico.estadisticas.resultados.info     = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
+servicio.diagnostico.estadisticas.resultados.title    = Resultados de la b\u00FAsqueda
+servicio.diagnostico.estadisticas.tipo                = Tipo
+servicio.diagnostico.estadisticas.url                 = URL
+servicio.diagnostico.estadisticas.usuario             = Usuario
+servicio.diagnostico.fecha.fin                        = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio                     = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend                     = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                            = Servicio de Diagn\u00F3stico
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
