Fix missing propertie value
Former-commit-id: 0c641195a8bb5e0867a0b6504680b479a323d110

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2355,6 +2355,7 @@ ob.resAnon.intav.report.chapterEv7.title                                     = V
 ob.resAnon.intav.report.chapterEv8.title                                     = Verificaci\u00F3n 1.1.4 : Enlaces descriptivos
 ob.resAnon.intav.report.chapterEv9.title                                     = Verificaci\u00F3n 1.2.1: C\u00F3digo V\u00E1lido (HTML y CSS)
 ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW : {0} ({1})
+ob.resAnon.intav.report.foot.basic.service                                   = Informe del Observatorio de Accesibilidad Web:  Informe emitido bajo demanda ({0})
 #ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW 
 ob.resAnon.intav.report.index.title                                          = \u00CDNDICE 
 ob.resAnon.intav.report.subtitle                                             = Centro de Referencia en Accesibilidad y Est\u00E1ndares Web
