Record count at the end of seed and tags grids
Former-commit-id: ac19ff4f6dffd7fc4985161353cbe3bb30526ad5

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -262,6 +262,7 @@ cargar.semilla.inalterables.title            = Inalteradas
 cargar.semilla.nuevas.title                  = Nuevas
 cargar.semilla.observatorio.acronimo         = Acr\u00F3nimo
 cargar.semilla.observatorio.activa           = Activa
+cargar.semilla.observatorio.buscar.total     = N\u00FAmero de resultados: 
 cargar.semilla.observatorio.categoria        = Segmento
 cargar.semilla.observatorio.complejidad      = Complejidad
 cargar.semilla.observatorio.dependencia      = Dependencia
@@ -2980,10 +2981,10 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin                        = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio                     = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend                     = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title                            = Servicio de Diagn\u00F3stico
+servicio.diagnostico.fecha.fin    = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title        = Servicio de Diagn\u00F3stico
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
