--- a/portal/src/main/resources/__ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/__ApplicationResources_en_US.properties
@@ -270,6 +270,7 @@ cargar.semilla.nuevas.title                  = New
 cargar.semilla.observatorio.acronimo         = Acronym
 cargar.semilla.observatorio.activa           = Active
 cargar.semilla.observatorio.ambito           = Scope
+cargar.semilla.observatorio.buscar.total     = Number of results
 cargar.semilla.observatorio.categoria        = Segment
 cargar.semilla.observatorio.clave            = Grouped by
 cargar.semilla.observatorio.complejidad      = Complexity
