--- a/portal/src/main/resources/_ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/_ApplicationResources_en_US.properties
@@ -2604,14 +2604,14 @@ observatory.graphic.accessibility.evolution.approval.AA.title                 = 
 observatory.graphic.accessibility.evolution.approval.NV.title                 = Evolution of Accessibility Compliance Level: Not Valid
 observatory.graphic.accessibility.level.allocation.by.page.title              = Page distribution by estimated level of adequacy
 observatory.graphic.accessibility.level.allocation.complex.title              = Estimated suitability level: complexity {0}
-observatory.graphic.accessibility.level.allocation.name                       = Global Distributed Access and Access
+observatory.graphic.accessibility.level.allocation.name                       = DistribucionNivelAccesibilidadGlobal
 observatory.graphic.accessibility.level.allocation.segment.name               = Distribution (S) {0}
 observatory.graphic.accessibility.level.allocation.segment.title              = Level of compliance split. {0}
 observatory.graphic.accessibility.level.allocation.title                      = Overall accessibility level distribution
 observatory.graphic.accessibility.level.compilance.segment.name               = DistribucionNivelCumplimientoS{0}
 observatory.graphic.accessibility.level.compilance.segment.title              = Estimated compliance status: segment {0}
 observatory.graphic.accessibility.level.compliance.complex.title              = Estimated compliance status: complexity {0}
-observatory.graphic.aspect.mid.name                                           = Commentary: aspects
+observatory.graphic.aspect.mid.name                                           = ComparacionMediasAspectos
 observatory.graphic.aspect.mid.title                                          = Comparison of oriented measurements
 observatory.graphic.aspects                                                   = Aspects
 observatory.graphic.compilance.by.verification.level.1.category.title         = Comparison of compliance with verification: {0}. A
@@ -2641,9 +2641,9 @@ observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = 
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Average score of websites by complexity and level of appropriateness
 observatory.graphic.global.puntuation.allocation.complexity.mark.name         = ComparacionAdecuacionComplejidad
 observatory.graphic.global.puntuation.allocation.complexity.mark.title        = Estimated level of suitability by complexity
-observatory.graphic.global.puntuation.allocation.segment.strached.name        = Accacioncitimento
+observatory.graphic.global.puntuation.allocation.segment.strached.name        = ComparacionPuntuacionSegmento
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Comparison of the score by Segmento
-observatory.graphic.global.puntuation.allocation.segments.mark.name           = Enforcement
+observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Comparison of performance by Segmento
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Estimated compliance status by complexity
@@ -2654,10 +2654,10 @@ observatory.graphic.mark.allocation.segment.name                              = 
 observatory.graphic.mark.allocation.segment.title                             = Distribution of scores: {0}
 observatory.graphic.mid.puntuation                                            = Results scores
 observatory.graphic.modality.by.verification.level.1.category.title           = Comparison of Modality by verification: {0}. A
-observatory.graphic.modality.by.verification.level.1.name                     = ComparoccionomalidalityI
+observatory.graphic.modality.by.verification.level.1.name                     = ComparacionModalidadVerificacionI
 observatory.graphic.modality.by.verification.level.1.title                    = Comparison of Modality to Verification. A
 observatory.graphic.modality.by.verification.level.2.category.title           = Comparison of Modality by verification: {0}. AA
-observatory.graphic.modality.by.verification.level.2.name                     = ComparoccionomalidalityII
+observatory.graphic.modality.by.verification.level.2.name                     = ComparacionModalidadVerificacionII
 observatory.graphic.modality.by.verification.level.2.title                    = Comparison of Modality to Verification. AA
 observatory.graphic.modality.green                                            = ?modalidad de modalidad?
 observatory.graphic.modality.red                                              = Modality fault
@@ -2673,7 +2673,7 @@ observatory.graphic.score.by.page.table.title                                 = 
 observatory.graphic.score.by.page.title                                       = The average page score and the estimated adequacy level of the page
 observatory.graphic.segment.aspect.mid.title                                  = Comparison of aspects geared to aspects: {0}
 observatory.graphic.segment.aspect.mid.title.complex                          = Average score per aspect: complexity {0}
-observatory.graphic.site.number                                               = No. Portales:
+observatory.graphic.site.number                                               = Number of websites:
 observatory.graphic.term                                                      = Words:
 observatory.graphic.term.number                                               = No Terms:
 observatory.graphic.verification                                              = Verification
@@ -2683,11 +2683,11 @@ observatory.graphic.verification.compilance.comparation.level.2.name          = 
 observatory.graphic.verification.compilance.comparation.level.2.title         = Compliance with verification: {0}. AA
 observatory.graphic.verification.mid.comparation.level.1.cat.title            = Average score: {0}. A
 observatory.graphic.verification.mid.comparation.level.1.complex.title        = Average verification score: complexity {0}. Suitability level A
-observatory.graphic.verification.mid.comparation.level.1.name                 = ComparaticiomasVerificas NAI
+observatory.graphic.verification.mid.comparation.level.1.name                 = ComparaticiomasVerificasNAI
 observatory.graphic.verification.mid.comparation.level.1.title                = Average verification score. Adequacy Level A
 observatory.graphic.verification.mid.comparation.level.2.cat.title            = Average score: {0}. AA
 observatory.graphic.verification.mid.comparation.level.2.complex.title        = Average verification score: complexity {0}. AA Suitability Level
-observatory.graphic.verification.mid.comparation.level.2.name                 = AlacionomaseisificaII
+observatory.graphic.verification.mid.comparation.level.2.name                 = ComparacionMediasVerificacionNAII
 observatory.graphic.verification.mid.comparation.level.2.title                = Average verification score. Adequacy level AA
 observatory.graphic.verification.points                                       = Verification Points
 observatory.graphics.level.A                                                  = A
@@ -4066,9 +4066,7 @@ welcome.action.message.generate.seeds      = Generate seeds (URLs files) for tra
 welcome.action.message.see.crawlings       = View the results of the sweeps and export them in various formats
 welcome.common.message                     = This is the traceability application of MINHAP web site. The actions that can be carried out with your profile include:
 
-xml.import.error               = Error importing seeds
-xml.import.success             = Seeds imported correctly
-xml.import.success.all.errors  = No seed has been incorporated
-xml.import.success.with.errors = Seeds imported correctly. Some have not been incorporated because the seed already existed
-xml.seed.not.valid             = The file does not contain valid elements
-xml.size.error                 = Too big file.
+xml.import.error   = Error importing seeds
+xml.import.success = Seeds imported correctly
+xml.seed.not.valid = The file does not contain valid elements
+xml.size.error     = Too big file.
